syntax = "proto3";
package rpc;

service DemoService {
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}

// We've added a NickName parameter to our HelloWorldRequest and assigned it a new field number.
// The server and client can now be regenerated and will be backward compatible with our existing
// implementation and older clients.
//
// During deserialization, unexpected fields are ignored by both the server and the client. As of
// proto3, all fields are optional in all messages. It is not possible to mark a field as "required".
message HelloWorldRequest {
    string Name = 1;
    string NickName = 2;
}

message HelloWorldResponse {
    string Greeting = 1;
}
